--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "%load_ext autoreload\n",
@@ -189,14 +180,16 @@
     "    for _, row in df_vcf.iterrows():\n",
     "        # Split ALT alleles (multi-allelic sites will have multiple ALT values)\n",
     "        alt_alleles = row['ALT'].split(',')\n",
-    "\n",
+    "        info_type = row['INFO'].split('TYPE=')[1].split(';')[0].split(',')\n",
+    "        \n",
     "        # Process each ALT allele separately\n",
-    "        for i, alt in enumerate(alt_alleles):\n",
+    "        for i, (alt, inty )in enumerate(zip(alt_alleles,info_type)):\n",
     "            new_row = {\n",
     "                \"#CHROM\": row[\"#CHROM\"],\n",
     "                \"POS\": row[\"POS\"],\n",
     "                \"REF\": row[\"REF\"],\n",
-    "                \"ALT\": alt  # Assign each alternate allele to a separate row\n",
+    "                \"ALT\": alt,  # Assign each alternate allele to a separate row\n",
+    "                \"INFO_TYPE\": inty\n",
     "            }\n",
     "\n",
     "            for sample in sample_names:\n",
@@ -224,8 +217,408 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 1: (1256, 16)\n",
+      "step 2: (945, 16)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#CHROM</th>\n",
+       "      <th>POS</th>\n",
+       "      <th>REF</th>\n",
+       "      <th>ALT</th>\n",
+       "      <th>INFO_TYPE</th>\n",
+       "      <th>RO_M7</th>\n",
+       "      <th>DP_M7</th>\n",
+       "      <th>AO_M7</th>\n",
+       "      <th>RO_M5</th>\n",
+       "      <th>DP_M5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AO_M6</th>\n",
+       "      <th>RO_C3</th>\n",
+       "      <th>DP_C3</th>\n",
+       "      <th>AO_C3</th>\n",
+       "      <th>RO_C2</th>\n",
+       "      <th>DP_C2</th>\n",
+       "      <th>AO_C2</th>\n",
+       "      <th>RO_C1</th>\n",
+       "      <th>DP_C1</th>\n",
+       "      <th>AO_C1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CM000429</td>\n",
+       "      <td>60867</td>\n",
+       "      <td>TAAAAAAAAAAGATAT</td>\n",
+       "      <td>TAAAAAAAAAAAGATTT</td>\n",
+       "      <td>complex</td>\n",
+       "      <td>9</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CM000429</td>\n",
+       "      <td>60867</td>\n",
+       "      <td>TAAAAAAAAAAGATAT</td>\n",
+       "      <td>TAAAAAAAAAAAGATAT</td>\n",
+       "      <td>ins</td>\n",
+       "      <td>9</td>\n",
+       "      <td>82</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>...</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5</td>\n",
+       "      <td>57</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>62</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CM000429</td>\n",
+       "      <td>60867</td>\n",
+       "      <td>TAAAAAAAAAAGATAT</td>\n",
+       "      <td>TAAAAAAAAAAAAGATAT</td>\n",
+       "      <td>ins</td>\n",
+       "      <td>9</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>46</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>62</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CM000429</td>\n",
+       "      <td>60889</td>\n",
+       "      <td>ACCCCACT</td>\n",
+       "      <td>ACCCCCACT</td>\n",
+       "      <td>ins</td>\n",
+       "      <td>9</td>\n",
+       "      <td>90</td>\n",
+       "      <td>81</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>66</td>\n",
+       "      <td>4</td>\n",
+       "      <td>69</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CM000429</td>\n",
+       "      <td>76625</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>snp</td>\n",
+       "      <td>76</td>\n",
+       "      <td>104</td>\n",
+       "      <td>28</td>\n",
+       "      <td>52</td>\n",
+       "      <td>80</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>36</td>\n",
+       "      <td>83</td>\n",
+       "      <td>47</td>\n",
+       "      <td>78</td>\n",
+       "      <td>112</td>\n",
+       "      <td>34</td>\n",
+       "      <td>63</td>\n",
+       "      <td>112</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1932</th>\n",
+       "      <td>CM000436</td>\n",
+       "      <td>1340712</td>\n",
+       "      <td>ACCCCCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>ACCCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>del</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1933</th>\n",
+       "      <td>CM000436</td>\n",
+       "      <td>1340712</td>\n",
+       "      <td>ACCCCCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>ACCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>del</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1934</th>\n",
+       "      <td>CM000436</td>\n",
+       "      <td>1340712</td>\n",
+       "      <td>ACCCCCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>ACCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>del</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1935</th>\n",
+       "      <td>CM000436</td>\n",
+       "      <td>1340712</td>\n",
+       "      <td>ACCCCCCCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>ACCCCCCCCCACCCGCTCGCGCCA</td>\n",
+       "      <td>del</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1936</th>\n",
+       "      <td>CM000436</td>\n",
+       "      <td>1341734</td>\n",
+       "      <td>TGGAA</td>\n",
+       "      <td>TGAA</td>\n",
+       "      <td>del</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1937 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        #CHROM      POS                            REF  \\\n",
+       "0     CM000429    60867               TAAAAAAAAAAGATAT   \n",
+       "1     CM000429    60867               TAAAAAAAAAAGATAT   \n",
+       "2     CM000429    60867               TAAAAAAAAAAGATAT   \n",
+       "3     CM000429    60889                       ACCCCACT   \n",
+       "4     CM000429    76625                              A   \n",
+       "...        ...      ...                            ...   \n",
+       "1932  CM000436  1340712  ACCCCCCCCCCCCCCACCCGCTCGCGCCA   \n",
+       "1933  CM000436  1340712  ACCCCCCCCCCCCCCACCCGCTCGCGCCA   \n",
+       "1934  CM000436  1340712  ACCCCCCCCCCCCCCACCCGCTCGCGCCA   \n",
+       "1935  CM000436  1340712  ACCCCCCCCCCCCCCACCCGCTCGCGCCA   \n",
+       "1936  CM000436  1341734                          TGGAA   \n",
+       "\n",
+       "                              ALT INFO_TYPE  RO_M7  DP_M7  AO_M7  RO_M5  \\\n",
+       "0               TAAAAAAAAAAAGATTT   complex      9     82      2      3   \n",
+       "1               TAAAAAAAAAAAGATAT       ins      9     82     67      3   \n",
+       "2              TAAAAAAAAAAAAGATAT       ins      9     82      2      3   \n",
+       "3                       ACCCCCACT       ins      9     90     81      1   \n",
+       "4                               G       snp     76    104     28     52   \n",
+       "...                           ...       ...    ...    ...    ...    ...   \n",
+       "1932  ACCCCCCCCCCCCACCCGCTCGCGCCA       del      0     23     11      0   \n",
+       "1933   ACCCCCCCCCCCACCCGCTCGCGCCA       del      0     23      0      0   \n",
+       "1934    ACCCCCCCCCCACCCGCTCGCGCCA       del      0     23      0      0   \n",
+       "1935     ACCCCCCCCCACCCGCTCGCGCCA       del      0     23      6      0   \n",
+       "1936                         TGAA       del      0     53     53      0   \n",
+       "\n",
+       "      DP_M5  ...  AO_M6  RO_C3  DP_C3  AO_C3  RO_C2  DP_C2  AO_C2  RO_C1  \\\n",
+       "0        46  ...      2      5     57      1      1     69      0      4   \n",
+       "1        46  ...     62      5     57     45      1     69     60      4   \n",
+       "2        46  ...      1      5     57      1      1     69      4      4   \n",
+       "3        53  ...     70      5     45     40      1     68     66      4   \n",
+       "4        80  ...     28     36     83     47     78    112     34     63   \n",
+       "...     ...  ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "1932     15  ...      7      1     16      4      0     19      2      2   \n",
+       "1933     15  ...      4      1     16      5      0     19      8      2   \n",
+       "1934     15  ...      2      1     16      1      0     19      0      2   \n",
+       "1935     15  ...     12      1     16      4      0     19      3      2   \n",
+       "1936     39  ...     61      0     57     57      0     49     48      0   \n",
+       "\n",
+       "      DP_C1  AO_C1  \n",
+       "0        62      1  \n",
+       "1        62     50  \n",
+       "2        62      4  \n",
+       "3        69     62  \n",
+       "4       112     49  \n",
+       "...     ...    ...  \n",
+       "1932     28      4  \n",
+       "1933     28     12  \n",
+       "1934     28      3  \n",
+       "1935     28      2  \n",
+       "1936     48     48  \n",
+       "\n",
+       "[1937 rows x 26 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#vcf_file = \"../data/filtered_final.vcf\"  \n",
+    "#df_vcf = read_vcf(vcf_file)\n",
+    "#print(f'step 1: {df_vcf.shape}')\n",
+    "#df_vcf=df_vcf[(df_vcf['REF']!='N')]\n",
+    "#print(f'step 2: {df_vcf.shape}')\n",
+    "#expand_multiallelic_variants(df_vcf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TAAAAAAAAAA GATAT\n",
+    "#TAAAAAAAAAAAGATTT"
+   ]
   },
   {
    "cell_type": "code",
